tests/bugs/invalid-field-access/source.english.swa
dialect:english;

start() int {
  let i: int = 10;
  print("%d", i.field);
  return 0;
}
